force-app/main/default/objects/Opportunity_Seller__c/Opportunity_Seller__c.object-meta.xml
<CustomObject>
    <label>Opportunity Seller</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Opportunity Seller Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Sellers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>