force-app/main/default/objects/Opportunity_Seller__c/fields/Business_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Business_Vertical__c</fullName>
    <label>Business Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>National Media &amp; Entertainment</fullName>
            </value>
            <value>
                <fullName>General Market West</fullName>
            </value>
            <value>
                <fullName>General Market East</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Political</fullName>
            </value>
            <value>
                <fullName>Partner PMP</fullName>
                <isActive>false</isActive>
                <label>Partner PMP</label>
            </value>
            <value>
                <fullName>Platform PMP</fullName>
                <isActive>false</isActive>
                <label>Platform PMP</label>
            </value>
            <value>
                <fullName>Programmatic - Others</fullName>
                <isActive>false</isActive>
                <label>Programmatic - Others</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>